tests/golden/compile-fail/trait_method_generic_mismatch.rua
trait Show {
    fn show(&self) -> String;
}

trait Container {
    fn store<T: Show>(&self, value: T);
}

struct Plain {}

fn store_plain<T: Container>(container: T, value: Plain) {
    container.store(value);
}
